# data_engineeringhwk

./: .gitignore  README.md
data_engineering_hw1/: Dockerfile  docker-compose.yaml  homework1.py  ingest_all.py  ingest_data.ipynb  ingest_data.py  ingest_green_data.py  ingest_zones.py  main.py  pipeline.py  pyproject.toml  queries.sql
data_engineering_hw1/terraform/: main.tf  terraform.tfvars.example
